--- a/pytest.ini
+++ b/pytest.ini
@@ -3,7 +3,7 @@ testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
-addopts = -v --tb=short
+addopts = -v --tb=short --reruns=3 --reruns-delay=1
 markers =
     smoke: Basic functionality tests to ensure the system is working
     regression: Comprehensive tests to check for regressions
